compiler/tests/en/errors/undef_call.salam
// EXPECT: E012
func main: nonexistent() end
